--- a/modulo-4/desafio/package.json
+++ b/modulo-4/desafio/package.json
@@ -10,6 +10,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@types/styled-components": "^5.1.24",
     "next": "latest",
     "react": "^17.0.2",
