--- a/modulo-5/desafio/package.json
+++ b/modulo-5/desafio/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
