--- a/modulo-5/desafio/package.json
+++ b/modulo-5/desafio/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.3",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/lodash": "^4.14.181",
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
