--- a/bootcamp-backend/modulo-1/aulas/my-bank-api/package.json
+++ b/bootcamp-backend/modulo-1/aulas/my-bank-api/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.7.2"
   }
