--- a/bootcamp-backend/modulo-1/aulas/my-bank-api/package.json
+++ b/bootcamp-backend/modulo-1/aulas/my-bank-api/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.4.0",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.7.2"
   }
