--- a/bootcamp-backend/modulo-3/aulas/package.json
+++ b/bootcamp-backend/modulo-3/aulas/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "winston": "^3.7.2"
   }
 }
