--- a/bootcamp-backend/modulo-3/aulas/package.json
+++ b/bootcamp-backend/modulo-3/aulas/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "winston": "^3.7.2"
   }
