--- a/bootcamp-backend/modulo-3/sales-api-sequelize/package.json
+++ b/bootcamp-backend/modulo-3/sales-api-sequelize/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
+    "sequelize": "^6.20.1",
     "winston": "^3.7.2"
   }
 }
