--- a/bootcamp-backend/modulo-3/desafio/package.json
+++ b/bootcamp-backend/modulo-3/desafio/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongodb": "^4.6.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1",
